--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ArtIIum</title>
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:400,600" rel="stylesheet">
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
