bug show artwork fixed

--- a/views/gallery/show.ejs
+++ b/views/gallery/show.ejs
@@ -21,12 +21,14 @@
       </div>
     </div>
     <div class="col-sm-6 artwork-info">
+      <% if (artworkIsCurrentUsers) { %>
       <form action="upload" method="post" enctype="multipart/form-data" class="">
         <label for="upload-photo" class="">Upload your Photo</label>
         <input type="file" name="artworkImage" id="upload-photo" class="form-control">
         <input type="hidden" value="<%= artwork._id%>" name="_id" id="upload-photo" class="form-control">
         <button class="btn btn-primary" type="submit" value="Upload an Artwork Photo!">Upload an Artwork Photo!</button>
       </form>
+      <% } %>
       <div class="artwork-progress">
         <p><%= artwork.description %></p>
       </div>
